<resources>
    <string name="app_name">AndroidToolBox</string>
    <string name="login_validate">VALIDER</string>
    <string name="home_bonjour">Bonjour</string>
    <string name="login_connexion">Connexion</string>
    <string name="cycle_title">cycle de vie de l\'activité</string>
    <string name="logout_validate">logout</string>
    <string name="Name">Name</string>
    <string name="Name_Form"></string>
    <string name="First_Name">First Name</string>
    <string name="FirstName_Form"></string>
    <string name="Birth_Date">Date</string>
    <string name="BirthDate_Form"></string>
    <string name="Form">FORMULAIRE</string>
    <string name="ReadForm">Read</string>
    <string name="Send_Form">Send</string>
    <string name="BirthDate_form">birthDate</string>
    <string name="acces">Accès aux informations Android</string>
    <string name="mes_contacts">Contacts de Victoire</string>
    <string name="nameWeb">Name</string>
    <string name="addressWeb">adress</string>
    <string name="emailWeb">mail</string>
    <string name="imageWeb" />
    <string name="detailsName">NAME </string>
    <string name="addressDetailsWS">address</string>
    <string name="mailDetails">mail</string>
    <string name="BLE">BLE</string>
    <string name="device_rssi">RSSI</string>
    <string name="device_name">Device Name</string>
    <string name="device_MAC">address MAC</string>
    <string name="scan_text">SCAN test</string>
    <string name="Ncompatible">Device non compatible</string>
    <string name="device_status">status</string>
    <string name="Write_button">WRITE</string>
    <string name="Read_button">READ</string>
    <string name="Notify_button">NOTIFY</string>
    <string name="Char_UUID">charUUID</string>
    <string name="name">Service NAME</string>
    <string name="device_title">Title</string>
    <string name="bledevice_UUID">UUID</string>
    <string name="BLEdevice_prop">device</string>
    <string name="BLEdevice_valeur">valeur</string>
    <string name="dialog_valeur">entrer valeur</string>
</resources>
