<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorBackGrownd"
    tools:context=".BLEDevice.BLEDeviceAdapter">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/device_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/device"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/BLEdevice_prop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/UUID" />

    <TextView
        android:id="@+id/UUID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bledevice_UUID"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <TextView
        android:id="@+id/valeur"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/BLEdevice_valeur"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/device" />

    <Button
        android:id="@+id/bNotify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/Notify_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/valeur" />

    <Button
        android:id="@+id/bRead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Read_button"
        app:layout_constraintBottom_toBottomOf="@+id/bNotify"
        app:layout_constraintEnd_toEndOf="@+id/bWrite"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/bNotify" />

    <Button
        android:id="@+id/bWrite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Write_button"
        app:layout_constraintBottom_toBottomOf="@+id/bRead"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/bRead" />

    <View
        android:id="@+id/divider3"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bRead" />
</androidx.constraintlayout.widget.ConstraintLayout>