<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackGrownd"
    tools:context=".HomeActivity">

    <ImageButton
        android:id="@+id/SauvButton"
        android:layout_width="77dp"
        android:layout_height="73dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/round"
        app:layout_constraintEnd_toEndOf="@+id/HomeSave"
        app:layout_constraintStart_toStartOf="@+id/HomeSave"
        app:layout_constraintTop_toBottomOf="@+id/textView9"
        app:srcCompat="@android:drawable/ic_dialog_info"/>

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="WebServices"
        app:layout_constraintEnd_toEndOf="@+id/SauvButton"
        app:layout_constraintStart_toStartOf="@+id/SauvButton"
        app:layout_constraintTop_toBottomOf="@+id/SauvButton" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Permission"
        app:layout_constraintEnd_toEndOf="@+id/PermissionsButton"
        app:layout_constraintStart_toStartOf="@+id/PermissionsButton"
        app:layout_constraintTop_toBottomOf="@+id/PermissionsButton" />

    <ImageButton
        android:id="@+id/PermissionsButton"
        android:layout_width="77dp"
        android:layout_height="73dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/round"
        app:layout_constraintEnd_toEndOf="@+id/homeCycle"
        app:layout_constraintStart_toStartOf="@+id/homeCycle"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        app:srcCompat="@android:drawable/ic_menu_call" />

    <ImageButton
        android:id="@+id/HomeSave"
        android:layout_width="77dp"
        android:layout_height="73dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/round"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/textView11"
        app:srcCompat="@android:drawable/ic_menu_save" />

    <ImageButton
        android:id="@+id/homeCycle"
        android:layout_width="77dp"
        android:layout_height="73dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/round"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/textView11"
        app:srcCompat="@android:drawable/stat_notify_chat" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Sauvegarde"
        app:layout_constraintEnd_toEndOf="@+id/HomeSave"
        app:layout_constraintStart_toStartOf="@+id/HomeSave"
        app:layout_constraintTop_toBottomOf="@+id/HomeSave" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Cycle de vie"
        app:layout_constraintEnd_toEndOf="@+id/homeCycle"
        app:layout_constraintStart_toStartOf="@+id/homeCycle"
        app:layout_constraintTop_toBottomOf="@+id/homeCycle" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="226dp"
        android:layout_height="105dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/isen" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_bonjour"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logout_validate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.863"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10"
        app:layout_constraintVertical_bias="0.704" />

    <ImageButton
        android:id="@+id/BLEbutton"
        android:layout_width="73dp"
        android:layout_height="74dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/round"
        app:layout_constraintEnd_toEndOf="@+id/PermissionsButton"
        app:layout_constraintStart_toStartOf="@+id/PermissionsButton"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        app:srcCompat="@android:drawable/stat_sys_data_bluetooth" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/BLE"
        app:layout_constraintEnd_toEndOf="@+id/BLEbutton"
        app:layout_constraintStart_toStartOf="@+id/BLEbutton"
        app:layout_constraintTop_toBottomOf="@+id/BLEbutton" />

</androidx.constraintlayout.widget.ConstraintLayout>